[metadata]
name = lemon
version = 1.2.1
author = Joel
author_email = none@none.none
description = A web server and framework for web development.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/InsaneMiner/Lemon
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >= 3.6


